syntax = "proto3";

option go_package = "./grpc";
package grpc;

service ProductService {
    rpc IsUserExist(IsUserExistRequest) returns (IsUserExistResponse);
}

message IsUserExistRequest {
    int32 userId = 1;
}

message IsUserExistResponse {
    bool success = 1;
}